@@ -1,5 +1,7 @@
 1998-12-20  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
+	* activity.h (ActionType): Remove -getActionType.
+
 	* Makefile.am (Schedule.lo ActionGroup.lo): Depend on CompoundAction.m.
 
 1998-12-17  Marcus G. Daniels  <mgd@chama.santafe.edu>
